--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # 사이트 정보
-title: "1도 몰라서 쓰는 " # 블로그 제목
-description: "언제 1을 쓰고 2를 쓸까" # 블로그 설명
+title: "1도 모른채 쓰는 노트 " # 블로그 제목
+description: "언제 1를 알고 2를 알게 될까? 하다보면 알겠지." # 블로그 설명
 url: "https://marideev.github.io"  # GitHub Pages 주소
 baseurl: ""  # 루트라면 "" 비워두기
 
